--- a/dagger2/build.gradle
+++ b/dagger2/build.gradle
@@ -2,20 +2,27 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+
+
+
     defaultConfig {
-        applicationId "in.co.trapps.daggerinjection"
+        applicationId "in.co.trapps.dagger2"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -26,7 +33,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    // Dagger 1
-    implementation 'com.squareup.dagger:dagger:1.2.5'
-    annotationProcessor 'com.squareup.dagger:dagger-compiler:1.2.5'
+    // Dagger 2
+    implementation 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 }
